added to the styling,fixed up the alignment of options for the answers, created separation between each element, made it more to my style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class= "container">
         <div class="card">
-            <div class="card-header text-center">
+            <div class="card-header text-white bg-info text-center">
                 Trivia of Music 
                 <div id="count" class = 'card-body'>
                     <!-- Timer Display Here -->
@@ -23,7 +23,7 @@
             </div>
             <div class="card-body text-center" id="triviaQuestions">
                 <!-- QUESTIONS SHOULD SHOW UP HERE -->
-                <button id="start">start</button>
+                <button class= "btn btn-info btn-block" id="start">start</button>
             </div>
         </div>
     </div>
